--- a/website/nginx.conf
+++ b/website/nginx.conf
@@ -8,7 +8,7 @@ server {
   }
 
     location /api {
-        proxy_pass          http://lft-api-gateway:5000;
+        proxy_pass          http://server:8080;
         proxy_set_header    X-Real-IP   $remote_addr;
         proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header    X-Forwarded-Proto http;
