--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.8.4-slim-buster
 
 WORKDIR /app
 
+COPY requirements.txt .
+
 RUN python3 -m pip install -r requirements.txt
 
 COPY . .
